# AITeacher

./: .gitignore  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 15c768af9282_merge_p2_and_p3_heads.py  3caa35db2988_align_p3_schema_to_plan.py  4817e8181108_add_staff_students_and_audit_logs.py  e8f1a2b3c4d5_add_paper_gen_jobs.py  (+15 more)
backend/app/: config.py  database.py  main.py  seed.py  seed_exam_majors.py  seed_past_exam_templates.py  seed_past_exams.py  seed_syllabus.py
backend/tests/: conftest.py  exam_profile_helpers.py  factories.py  paper_gen_job_helpers.py  test_admin_packages.py  test_admin_staff.py  test_admin_students.py  test_agent_tools.py  test_audit_service.py  test_auth.py  test_auth_hardening.py  test_chat_api_mock.py  test_chat_schemas.py  test_chat_tool_loop.py  test_chat_tools_extended.py  test_chat_tools_papers.py  test_cross_subject_trim.py  test_daily_task_generation.py  test_daily_tasks.py  test_exam_major_seed.py  test_exam_profile_api.py  test_exam_profile_light_revise.py  test_exam_profile_models.py  test_exam_profile_service.py  test_exam_profile_weights.py  test_learning_events_wrong_mastery.py  test_learning_loop.py  test_master_plan_pending.py  test_model_gateway_mock.py  test_model_gateway_openai_compat.py  test_model_policy_api.py  test_models.py  test_org_student_intervention.py  test_p3_models_smoke.py  test_p4_models_smoke.py  test_paper_gen.py  test_paper_gen_jobs.py  test_placement_flow.py  test_placement_grading.py  test_placement_paper_context.py  (+21 more)
(+234 files in other folders)
